--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,3 +96,26 @@ services:
       - "traefik.http.routers.cloud.tls.certresolver=myresolver"
       - "traefik.http.routers.cloud.service=cloudService"
       - "traefik.http.services.cloudService.loadBalancer.server.port=80"
+
+  helpdeskDB:
+    image: mariadb:10.7
+    container_name: mariadb
+    hostname: mariadb
+    environment:
+      - MARIADB_ROOT_PASSWORD=password
+      - MARIADB_DATABASE=glpidb
+      - MARIADB_USER=glpi_user
+      - MARIADB_PASSWORD=glpi
+  
+  helpdesk:
+    build:
+      context: ./helpdesk
+      dockerfile: Dockerfile
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.helpdesk.rule=Host(`$HELPDESK_URL`)"
+      - "traefik.http.routers.helpdesk.entrypoints=websecure"
+      - "traefik.http.routers.helpdesk.tls.certresolver=myresolver"
+      - "traefik.http.routers.helpdesk.service=helpdeskService"
+      - "traefik.http.services.helpdeskService.loadBalancer.server.port=80"
+    
